// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Slider base demo works fine 1`] = `
<base>
  <t-slider
    defaultValue="{{23}}"
    step="{{0.1}}"
    bind:change="handleChange"
  />
</base>
`;

exports[`Slider Slider capsule demo works fine 1`] = `
<capsule>
  <t-slider
    defaultValue="{{30}}"
    theme="capsule"
  />
  <t-slider
    defaultValue="{{
      Array [
        40,
        60,
      ]
    }}"
    range="{{true}}"
    theme="capsule"
  />
  <t-slider
    defaultValue="{{
      Array [
        40,
        60,
      ]
    }}"
    label="\${value}"
    range="{{true}}"
    theme="capsule"
  />
  <t-slider
    defaultValue="{{60}}"
    marks="{{
      Object {
        "0": "0",
        "100": "100",
        "20": "20",
        "40": "40",
        "60": "60",
        "80": "80",
      }
    }}"
    step="{{20}}"
    theme="capsule"
  />
  <t-slider
    defaultValue="{{
      Array [
        20,
        80,
      ]
    }}"
    marks="{{
      Object {
        "0": "0",
        "100": "100",
        "20": "20",
        "40": "40",
        "60": "60",
        "80": "80",
      }
    }}"
    range="{{true}}"
    step="{{20}}"
    theme="capsule"
  />
</capsule>
`;

exports[`Slider Slider disabled demo works fine 1`] = `
<disabled>
  <t-slider
    disabled="{{true}}"
    value="{{35}}"
  />
  <wx-view
    class="wrapper"
  >
    <t-slider
      disabled="{{true}}"
      label="\${value}"
      range="{{true}}"
      showExtremeValue="{{true}}"
      value="{{
        Array [
          40,
          60,
        ]
      }}"
    />
  </wx-view>
  <wx-view
    class="wrapper"
  >
    <t-slider
      disabled="{{true}}"
      marks="{{
        Object {
          "0": "0",
          "100": "100",
          "20": "20",
          "40": "40",
          "60": "60",
          "80": "80",
        }
      }}"
      range="{{true}}"
      step="{{20}}"
      value="{{
        Array [
          20,
          60,
        ]
      }}"
    />
  </wx-view>
</disabled>
`;

exports[`Slider Slider label demo works fine 1`] = `
<wx-label>
  <wx-view
    class="wrapper"
  >
    <t-slider
      label="\${value}"
      value="{{35}}"
      bind:change="handleChange"
    />
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    带数值双游标滑块
  </wx-view>
  <wx-view
    class="wrapper"
  >
    <t-slider
      defaultValue="{{
        Array [
          40,
          60,
        ]
      }}"
      label="\${value}"
      range="{{true}}"
      showExtremeValue="{{true}}"
    />
  </wx-view>
</wx-label>
`;

exports[`Slider Slider max demo works fine 1`] = `
<max>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    defaultValue="30"
    label="{{true}}"
    max="{{200}}"
    min="{{30}}"
  />
</max>
`;

exports[`Slider Slider range demo works fine 1`] = `
<range>
  <t-slider
    defaultValue="{{
      Array [
        35,
        65,
      ]
    }}"
    range="{{true}}"
  />
</range>
`;

exports[`Slider Slider step demo works fine 1`] = `
<step>
  <wx-view
    class="wrapper"
  >
    <t-slider
      defaultValue="{{60}}"
      marks="{{
        Object {
          "0": "0",
          "100": "100",
          "20": "20",
          "40": "40",
          "60": "60",
          "80": "80",
        }
      }}"
      step="{{20}}"
      bind:change="handleChange"
    />
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    带刻度双游标滑块
  </wx-view>
  <wx-view
    class="wrapper"
  >
    <t-slider
      defaultValue="{{
        Array [
          20,
          60,
        ]
      }}"
      marks="{{
        Object {
          "0": "0",
          "100": "100",
          "20": "20",
          "40": "40",
          "60": "60",
          "80": "80",
        }
      }}"
      range="{{true}}"
      step="{{20}}"
    />
  </wx-view>
</step>
`;
